try to solve out of memory exception during tests